# rust-rocket-juniper-graphql-example

./: Cargo.toml  README.md  Rocket.toml  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: main.rs  routes.rs
src/db/: mod.rs  models.rs  repository.rs  schema.rs
src/graphql/: context.rs  mod.rs  resolver.rs  schema.rs
