[package]
name = "rust-rocket-juniper-graphql-example"
version = "0.1.0"
authors = ["Kanchi Shimono <dev.kanchi.shimono@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = { version = "0.14.2", features = ["serde_json"] }
juniper_rocket = { version = "0.5.2" }
rocket = { version = "0.4.5" }
rocket_contrib = { version = "0.4.5", default-features = false, features = ["diesel_postgres_pool"] }
serde_json = { version = "1.0" }
diesel = { version = "1.4.5", features=["postgres", "uuidv07", "chrono"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4.15", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.11"
env_logger = "0.7.1"
